@@ -355,6 +355,13 @@ int cli_cvdload(FILE *fd, struct cl_node **root, int *virnum)
 	}
     }
 
+    if(cvd.fl > cl_retflevel()) {
+	cli_warnmsg("****************************************************\n");
+	cli_warnmsg("***  This version of ClamAV engine is outdated.  ***\n");
+	cli_warnmsg("***         Please update it IMMEDIATELY!        ***\n");
+	cli_warnmsg("****************************************************\n");
+    }
+
     fseek(fd, 512, SEEK_SET);
 
     tmpdir = getenv("TMPDIR");
